# rust-os

./: .gitignore  README.md
rust_os/: Cargo.toml
rust_os/src/: main.rs  vga_buffer.rs
